--- a/contactus.html
+++ b/contactus.html
@@ -293,6 +293,18 @@
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
                 <div class="col">
+                    <div
+                        class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
+                        <input type='file' id="customer_data" name="resume"
+                            class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0" required />
+                        <span class='label' data-js-label>Resume</span>
+                        <span class='button'>Browse</span>
+                    </div>
+                    <p class="text-danger" id="customer_data_w"></p>
+                </div>
+            </div>
+            <div class="row form_field_container flex-column flex-sm-row">
+                <div class="col">
                     <textarea placeholder="Your Message" id="customer_message" name="career_message"
                         class="form-control w-100 field message_field"></textarea>
                 </div>
