--- a/contactus.html
+++ b/contactus.html
@@ -753,11 +753,10 @@
   </script>
   <script>
  $(function() {
-       $("form#detaform").submit(function(e) {
+       $("form#careerForm").submit(function(e) {
             e.preventDefault();
            $('.contact-form-section').addClass('active');
             var formData = new FormData(this);
-              console.log(formData);
             $.ajax({
                 url: "https://ecomaxlubricant.com/api/index.php?a=contact",
                 type: 'POST',
