--- a/contactus.html
+++ b/contactus.html
@@ -267,7 +267,7 @@
             <span class="loader"></span>
           </div>
           
-          <form class="form_container_in needs-validation" enctype="multipart/form-data" id="careerForm" novalidate>
+          <form class="form_container_in needs-validation contact-form-section" enctype="multipart/form-data" id="careerForm" novalidate>
             <div class="row form_field_container flex-column flex-sm-row">
                 <div class="col">
                     <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
