--- a/contactus.html
+++ b/contactus.html
@@ -764,7 +764,7 @@
                 success: function (data) {
                     console.log(data);
                     alert(data);
-                  
+                    $('.contact-form-section').removeClass('active');
                 },
                 cache: false,
                 contentType: false,
