--- a/contactus.html
+++ b/contactus.html
@@ -45,8 +45,7 @@
     transition: all 0.5s ease-in;
   }
   .contact-form-section.active .loader-section {
-    
-
+    opacity: 1;
   }
   .contact-form-section.active #detaform {
     display: none;
