--- a/contactus.html
+++ b/contactus.html
@@ -263,7 +263,7 @@
         </div>
 
         <div class="col-12 p-0 ps-lg-5 form_container contact-form-section col-sm-7 pe-lg-4 ">
-          <div class="loader-section">
+          <div class="loader-section" id="loader-none">
             <span class="loader"></span>
           </div>
           
@@ -768,8 +768,7 @@
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
-                    $('.loader-section').removeClass('d-none');
-                      
+                    document.getElementById("loader-none").style.display = "none" 
                     let Thank ="Thank you for your interest in Ecomax, your trusted manufacturer and supplier of lubricant engine oil. We're here to assist you with any inquiries, feedback, or requests you may have. Please feel free to reach out to us using the information above:"
                     document.getElementById("Submit-form").innerHTML=Thank;
                     console.log("data");
