--- a/contactus.html
+++ b/contactus.html
@@ -271,7 +271,7 @@
             <div class="row form_field_container flex-column flex-sm-row">
               <div class="col">
                   <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
-                      class="form-control first_name field" aria-label="First name" required />
+                      class="form-control first_name field AllFormdata" aria-label="First name" required />
               </div>
               <div class="col">
                   <input type="text" name="last_name" id="customer_last_name" placeholder="Last Name*"
@@ -763,8 +763,8 @@
                 data: formData,
                 success: function (data) {
                     alert(data);
-                    console.log(data);
-                    if(data == null){
+                  console.log(data.status );
+                    if(data.status === "FAILED"){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
@@ -783,3 +783,4 @@
   </script>
 </body>
 </html>
+
