--- a/contactus.html
+++ b/contactus.html
@@ -763,8 +763,8 @@
                 data: formData,
                 success: function (data) {
                     alert(data);
-                  console.log(data.status );
-                    if(data.status === "FAILED"){
+                  console.log(data.status);
+                    if(data.status == "FAILED"){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
