--- a/contactus.html
+++ b/contactus.html
@@ -763,7 +763,7 @@
                 data: formData,
                 success: function (data) {
                     alert(data);
-                  console.log(data);
+                  console.log(data.message);
                     if(data.status == "FAILED"){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
