--- a/contactus.html
+++ b/contactus.html
@@ -764,7 +764,7 @@
                 success: function (data) {
                     alert(data);
                   console.log(data.message);
-                    if(data.status == "FAILED"){
+                    if(data.status == undefined){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
