--- a/contactus.html
+++ b/contactus.html
@@ -763,7 +763,7 @@
                 data: formData,
                 success: function (data) {
                     alert(data);
-                    let validationCustom01 = document.getElementById("validationCustom01")
+                    let validationCustom01 = document.getElementById("validationCustom01").value
                     if(validationCustom01 == ""){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
