--- a/contactus.html
+++ b/contactus.html
@@ -763,8 +763,11 @@
                 data: formData,
                 success: function (data) {
                     alert(data);
-                    let validationCustom01 = document.getElementById("validationCustom01").value
-                    if(validationCustom01 == ""){
+                    let validationCustom01 = document.getElementById("validationCustom01").value;
+                    let customer_last_name = document.getElementById("customer_last_name").value;
+                    let customer_email = document.getElementById("customer_number").value;
+                    let customer_number = document.getElementById("customer_number").value;
+                    if(validationCustom01 == "" && customer_last_name == "" && customer_email == "" && customer_number == ""){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
