--- a/contactus.html
+++ b/contactus.html
@@ -767,7 +767,7 @@
                     let customer_last_name = document.getElementById("customer_last_name").value;
                     let customer_email = document.getElementById("customer_number").value;
                     let customer_number = document.getElementById("customer_number").value;
-                    if(validationCustom01 == "" && customer_last_name == "" && customer_email == "" && customer_number == ""){
+                    if(validationCustom01 == "" || customer_last_name == "" || customer_email == "" || customer_number == ""){
                     // $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
