--- a/contactus.html
+++ b/contactus.html
@@ -768,7 +768,7 @@
                     let customer_email = document.getElementById("customer_number").value;
                     let customer_number = document.getElementById("customer_number").value;
                     if(validationCustom01 == "" || customer_last_name == "" || customer_email == "" || customer_number == ""){
-                    // $('.contact-form-section').removeClass('active');
+                    $('.contact-form-section').removeClass('active');
                       console.log("no data");
                     }else{
                     document.getElementById("loader-none").style.display = "none" 
