--- a/career.html
+++ b/career.html
@@ -176,7 +176,7 @@
                                 <div
                                     class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
                                     <input type='file' id="customer_data" name="resume"
-                                        class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0" required />
+                                        class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0"/>
                                     <span class='label' data-js-label>Resume</span>
                                     <span class='button'>Browse</span>
                                 </div>
