--- a/contactus.html
+++ b/contactus.html
@@ -295,7 +295,7 @@
               <div class="col">
                   <div class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
                       <input type='file' id="customer_data" name="resume"
-                          class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0" />
+                          class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0" required />
                       <span class='label' data-js-label>Resume</span>
                       <span class='button'>Browse</span>
                   </div>
