--- a/contactus.html
+++ b/contactus.html
@@ -305,7 +305,7 @@
           <div class="row form_field_container flex-column flex-sm-row">
               <div class="col">
                   <textarea placeholder="Your Message" id="customer_message" name="career_message"
-                      class="form-control w-100 field message_field"></textarea>
+                      class="form-control w-100 field message_field" required></textarea>
               </div>
           </div>
           <div class="sparkle-button">
