--- a/career.html
+++ b/career.html
@@ -176,7 +176,7 @@
                                 <div
                                     class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
                                     <input type='file' id="customer_data" name="resume"
-                                        class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0" required />
+                                        class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0" />
                                     <span class='label' data-js-label>Resume</span>
                                     <span class='button'>Browse</span>
                                 </div>
@@ -186,7 +186,7 @@
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col">
                                 <textarea placeholder="Your Message" id="customer_message" name="career_message"
-                                    class="form-control w-100 field message_field" required></textarea>
+                                    class="form-control w-100 field message_field"></textarea>
                             </div>
                         </div>
                         <div class="sparkle-button">
