--- a/contactus.html
+++ b/contactus.html
@@ -308,7 +308,7 @@
                       class="form-control w-100 field message_field" ></textarea>
               </div>
           </div>
-          <div class="sparkle-button">
+          <div class="sparkle-button mb-5">
               <div class="sparkle-button career-form-btn">
                   <button class="btn2 d-flex align-items-center" type="submit">
                       <span class="about-btn d-flex align-items-center justify-content-center">
@@ -319,7 +319,7 @@
               </div>
           </div>
         </form>
-          <div class="heading_container text-center">
+          <div class="heading_container text-center ">
             <p id="Submit-form" class="heading_description"></p>
           </div>
         </div>
