--- a/career.html
+++ b/career.html
@@ -167,8 +167,9 @@
 
                             </div>
                             <div class="col">
-                                <input type="number" name="number" id="phone_error" placeholder="Phone Number*" required
-                                    class="field form-control error hidden" />
+                                <input type="number" name="number" id="myform_phone" placeholder="Phone Number*" required
+                                    class="field form-control "  />
+                                    <p class="error hidden"  id="phone_error">Please enter a valid phone number</p>
 
 
                             </div>
