--- a/career.html
+++ b/career.html
@@ -169,7 +169,7 @@
                             <div class="col">
                                 <input type="number" name="number" id="myform_phone" placeholder="Phone Number*" required
                                     class="field form-control "  />
-                                    <p class="error hidden"  id="phone_error">Please enter a valid phone number</p>
+                                    <p class="error d-none"  id="phone_error">Please enter a valid phone number</p>
 
 
                             </div>
