--- a/career.html
+++ b/career.html
@@ -17,7 +17,17 @@
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
-
+    <style>
+        .error
+{
+  color: red;
+  size: 80%
+}
+.hidden
+{
+  display:none;
+}
+    </style>
 <body>
     <a href="#top">
         <div class="scrollbar back d-none">
@@ -169,7 +179,7 @@
                             <div class="col">
                                 <input type="number" name="number" id="myform_phone" placeholder="Phone Number*" required
                                     class="field form-control "  />
-                                    <p class="error d-none"  id="phone_error">Please enter a valid phone number</p>
+                                    <p class="error hidden"  id="phone_error">Please enter a valid phone number</p>
 
 
                             </div>
