--- a/contactus.html
+++ b/contactus.html
@@ -765,6 +765,7 @@
                     let validationCustom01 = document.getElementById("validationCustom01").value;
                     let customer_last_name = document.getElementById("customer_last_name").value;
                     let customer_email = document.getElementById("customer_number").value;
+                    console.log(customer_email);
                     let customer_number = document.getElementById("customer_number").value;
                     if(validationCustom01 == "" || customer_last_name == "" || customer_email == "" || customer_number == ""){
                     $('.contact-form-section').removeClass('active');
